Обновление компонентов и стилей: добавлены Header и Footer, изменены размеры шрифтов в секциях, добавлены видео в компонент CasesPreview, обновлены файлы индекса и конфигурации проекта.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,3 +45,9 @@ body {
   /* Устанавливаем шрифт по умолчанию для текста */
   font-family: 'SF Pro Display Regular', sans-serif;
 }
+
+@media (min-width: 768px) {
+  h2 {
+    font-size: 33px; /* Установлен минимальный размер шрифта для h2 на экранах от 768px */
+  }
+}
