--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,7 @@ h2 {
 
 @media (min-width: 768px) {
   h2 {
-    font-size: 4.5rem; /* text-7xl */
+    font-size: 2rem; /* text-7xl */
   }
 }
 
@@ -63,6 +63,6 @@ h2 {
 }
 
 .hover-lift:hover {
-  transform: translateY(-30px);
-  color: #1C1C1C; /* Изменяем цвет текста на черный при наведении */
+  transform: translateY(-25px);
+  color: #769AB8; /* Изменяем цвет текста на черный при наведении */
 }
